create project skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Little Owl</title>
+
+
 </head>
 <body>
+    <main ui-view>Owl</main>
+
 
 </body>
 </html>
