--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Little Owl</title>
-
-
 </head>
 <body>
-    <main ui-view>Main. You should not see this</main>
+    <main ui-view>Blueprint. You should not see this</main>
+    <i>Test</i>
 </body>
 </html>
